Added: Sale, Goods

--- a/index.html
+++ b/index.html
@@ -61,7 +61,42 @@
         </div>
     </div>
     <div class="sale">
-        <img class="sale_back" src="sale_back.png"></img>
+        <div class="inner_sale">
+            <h1 class="sale_header">Супер кресло</h1>
+            <p class="sale_description">Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
+            <button class="sale_description_btn">
+                <p class="btn_label">Подробнее</p>
+            </button>
+        </div>
+    </div>
+    <div class="goods">
+        <h1 class="goods_header">Специальные предложения</h1>
+        <div class="goods_items">
+            <div class="goods_item">
+                <img src="goods_img.png" alt="" class="goods_img">
+                <p class="item_description">Парикмахерское кресло «Норм» гидравлическое</p>
+                <p class="price">9900 ₽</p>
+                <button class="buy_btn">Купить</button>
+            </div>
+            <div class="goods_item">
+                <img src="goods_img.png" alt="" class="goods_img">
+                <p class="item_description">Парикмахерское кресло «Норм» гидравлическое</p>
+                <p class="price">9900 ₽</p>
+                <button class="buy_btn">Купить</button>
+            </div>
+            <div class="goods_item">
+                <img src="goods_img.png" alt="" class="goods_img">
+                <p class="item_description">Парикмахерское кресло «Норм» гидравлическое</p>
+                <p class="price">9900 ₽</p>
+                <button class="buy_btn">Купить</button>
+            </div>
+            <div class="goods_item">
+                <img src="goods_img.png" alt="" class="goods_img">
+                <p class="item_description">Парикмахерское кресло «Норм» гидравлическое</p>
+                <p class="price">9900 ₽</p>
+                <button class="buy_btn">Купить</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
