--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
         </div>
     </div>
     <div class="goods">
-        <h1 class="goods_header">Специальные предложения</h1>
+        <div class="goods_header">
+            <h1 class="goods_header">Специальные предложения</h1>
+            <img src="Truck.png" alt="">
+        </div>
         <div class="goods_items">
             <div class="goods_item">
                 <img src="goods_img.png" alt="" class="goods_img">
@@ -96,6 +99,44 @@
                 <p class="price">9900 ₽</p>
                 <button class="buy_btn">Купить</button>
             </div>
+        </div>
+    </div>
+    <div class="add">
+        <div class="subscribe">
+            <div class="sub_inner">
+                <h1 class="sub_header">Получайте бонусы и подарки</h1>
+                <p class="sub_description">Каждый месяц разыгрываем
+                    10 000 рублей для наших клиентов</p>
+                <input type="email" placeholder="Введите e-mail" class="sub_input">
+            </div>
+            <img src="email.png" alt="" class="sub_img">
+        </div>
+        <div class="our_shops">
+            <div class="shops_inner">
+                <h1 class="shops_header">Заходите к нам</h1>
+                <p class="shops_description">Более 300 магазинов
+                    по всей России</p>
+                <button class="shops_btn">Карта магазинов</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer_line">
+            <div class="links">
+                <img src="link1.png" alt="" class="link">
+                <img src="link2.png" alt="" class="link">
+                <img src="link3.png" alt="" class="link">
+                <img src="link4.png" alt="" class="link">
+            </div>
+            <p>198555, Невский пр. 140, офис 140</p>
+            <div class="call_block">
+                <p class="phone_number">8 (812) 123-45-67</p>
+                <button class="call_btn">Обратный звонок</button>
+            </div>
+        </div>
+        <div class="policy">
+            <p class="pol_text">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
+            <p class="pol_text">Политика конфиденциальности</p>
         </div>
     </div>
 </body>
